# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--1.0
#

2004-10-08 18:47:17 GMT	John Goerzen <jgoerzen@complete.org>	patch-56

    Summary:
      Checkpointing development
    Revision:
      missingh--head--1.0--patch-56


    modified files:
     ChangeLog libsrc/MissingH/Logging/Logger.hs


2004-10-08 17:38:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-55

    Summary:
      Have a working basis for logging
    Revision:
      missingh--head--1.0--patch-55


    new files:
     libsrc/MissingH/Logging/Logger.hs

    modified files:
     ChangeLog Makefile


2004-10-08 15:32:58 GMT	John Goerzen <jgoerzen@complete.org>	patch-54

    Summary:
      Removed provisional logging stuff
    Revision:
      missingh--head--1.0--patch-54


    removed files:
     libsrc/MissingH/Logging/Default.hs
     libsrc/MissingH/Logging/Logger.hs

    modified files:
     ChangeLog libsrc/MissingH/List.hs libsrc/MissingH/Logging.hs


2004-10-08 13:44:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-53

    Summary:
      Updated with some IORef stuff
    Revision:
      missingh--head--1.0--patch-53


    new files:
     libsrc/MissingH/Logging/Default.hs

    modified files:
     ChangeLog libsrc/MissingH/Logging.hs
     libsrc/MissingH/Logging/Handler.hs


2004-10-08 13:17:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-52

    Summary:
      Fixed Makefile
    Revision:
      missingh--head--1.0--patch-52

    Keywords: 
    

    new files:
     libsrc/MissingH/Logging/Logger.hs

    modified files:
     ChangeLog Makefile


2004-10-08 03:33:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-51

    Summary:
      Added more docs
    Revision:
      missingh--head--1.0--patch-51


    modified files:
     ChangeLog libsrc/MissingH/Logging/Handler/Syslog.hs


2004-10-08 03:01:03 GMT	John Goerzen <jgoerzen@complete.org>	patch-50

    Summary:
      Split out Simple handler